# jt808-deprecated

./: CMakeLists.txt  Makefile  README  README.md  bcd.cpp  jt808_cmd.cpp  jt808_service.cpp  main.cc  main.cpp  unix_socket.cpp
bcd/: bcd.cc  bcd.h
command/: jt808_command.cc
common/: jt808_area_route.h  jt808_can.h  jt808_passthrough.h  jt808_position_report.h  jt808_protocol.h  jt808_terminal_control.h  jt808_terminal_parameters.cc  jt808_terminal_parameters.h  jt808_upgrade.h  jt808_util.cc  jt808_util.h  jt808_vehicle_control.h
devices/: devices.list
examples/: devices.txt
include/: bcd.h  jt808_service.h  jt808_util.h  unix_socket.h
jt808/: CMakeLists.txt  Makefile
jt808/bcd/: CMakeLists.txt  bcd.cc  bcd.h
jt808/command/: CMakeLists.txt  jt808_command.cc
jt808/common/: CMakeLists.txt  jt808_protocol.h  jt808_terminal_parameters.cc  jt808_terminal_parameters.h  jt808_upgrade.h  jt808_util.cc  jt808_util.h  jt808_vehicle_control.h
jt808/examples/: arearoute.txt  terminalparameter.txt
jt808/main/: command_main.cc  service_main.cc  terminal_main.cc
jt808/service/: CMakeLists.txt  jt808_area_route.h  jt808_can.h  jt808_passthrough.h  jt808_position_report.cc  jt808_position_report.h  jt808_protocol.h  jt808_service.cc  jt808_service.h  jt808_terminal_control.h  jt808_terminal_parameters.cc  jt808_terminal_parameters.h  jt808_util.cc  jt808_util.h  jt808_vehicle_control.h
jt808/terminal/: CMakeLists.txt  jt808_protocol.h  jt808_terminal.cc  jt808_terminal.h  jt808_terminal_parameters.cc  jt808_terminal_parameters.h  jt808_terminal_test.cc
jt808/unix_socket/: unix_socket.cc  unix_socket.h
jt808/util/: container_clear.h
main/: command_main.cc  service_main.cc  terminal_main.cc
service/: jt808_position_report.cc  jt808_position_report.h  jt808_protocol.h  jt808_service.cc  jt808_service.h  jt808_terminal_parameters.h  jt808_util.cc  jt808_util.h
terminal/: CMakeLists.txt  gps_data.h  jt808_area_route.cc  jt808_area_route.h  jt808_protocol.h  jt808_terminal.cc  jt808_terminal.h  jt808_terminal_parameters.cc  jt808_terminal_parameters.h  jt808_terminal_parameters_test.cc  jt808_terminal_test.cc
unix_socket/: CMakeLists.txt  unix_socket.cc  unix_socket.h
util/: container_clear.h
